middleware.yaml
apiVersion: v1
kind: Service
metadata:
  name: middleware-svc
spec:
  selector:
    app: middleware
  ports:
    - port: 9000
      targetPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware
spec:
  selector:
    matchLabels:
      app: middleware
  template:
    metadata:
      labels:
        app: middleware
    spec:
      containers:
        - name: middleware
          image: middleware
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 9000
